# quotable

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
clips/: admin.py  apps.py  models.py  urls.py  views.py
clips/management/commands/: process_subs.py
clips/migrations/: 0001_initial.py  0002_alter_source_thumbnail_alter_source_video_file.py  0002_initial.py  0003_alter_source_source_type.py
clips/templates/clips/: base.html  home.html  quote_detail.html  quote_search.html  watch_source.html
clips/utils/: subtitle_importer.py  video_duration.py
core/: manage.py
core/core/utils/: collections.py  misc.py  settings.py  update.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
learning/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
learning/migrations/: 0001_initial.py  0002_wordcache.py
learning/utils/: dictionary.py
