[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "nodirkhuj4",email = "hubergit7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
